--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "nodemon": "^2.0.15"
   },
   "dependencies": {
+    "bootstrap": "^5.1.3",
     "express": "^4.17.3",
     "express-handlebars": "^6.0.2"
   }
