segunda entrega del proyecto de backend

--- a/.env
+++ b/.env
@@ -1,1 +1,12 @@
 PORT=8080
+MONGO_DB_URI=mongodb://localhost:27017 
+DB_NAME=productos
+FIREBASE_DATABASE_URL=https://coder-backend-ecommerce-default-rtdb.firebaseio.com/
+
+DATABASE_HOST=127.0.0.1
+DATABASE_NAME=ecommerce
+DATABASE_USER=
+DATABASE_PASSWORD=
+DATABASE_PORT=3306
+
+
