--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js",
-    "dev": "nodemon index.js"
+    "dev": "nodemon index.js",
+    "dev-mongodb": "nodemon index.js --DB_TYPE=mongodb",
+    "dev-firebase": "nodemon index.js --DB_TYPE=firebase",
+    "dev-mariadb": "nodemon index.js --DB_TYPE=mariadb"
   },
   "keywords": [],
   "author": "",
@@ -15,10 +18,18 @@
     "nodemon": "^2.0.15"
   },
   "dependencies": {
+    "@hapi/boom": "^9.1.4",
     "bootstrap": "^5.1.3",
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
-    "express-handlebars": "^6.0.2"
+    "express-handlebars": "^6.0.2",
+    "firebase-admin": "^10.0.2",
+    "joi": "^17.6.0",
+    "knex": "^1.0.6",
+    "minimist": "^1.2.6",
+    "mongoose": "^6.2.8",
+    "mysql": "^2.18.1",
+    "yargs": "^17.4.0"
   }
 }
